--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import { BeritaList } from "@/components/BeritaList";
 		<!-- Layanan -->
 		<Layanan className="mx-20 max-sm:mx-5 mb-30 max-sm:my-5" client:only="react"/>
 		<!-- Laporan -->
-		<Laporan client:only="react"/>
+		<Laporan id="laporan" client:only="react"/>
 
 		<!-- Kepala Kemenag -->
 		<Sambutan client:only="react" />
