improvement for user experiences

--- a/src/pages/berita/index.astro
+++ b/src/pages/berita/index.astro
@@ -4,9 +4,9 @@ import HorizontalNews from "@/components/berita/HorizontalNews.astro";
 import NewsLayout from "@/layouts/NewsLayout.astro";
 import pb from "@/lib/database";
 
-const beritas = await pb.collection('news').getFullList({expand:'category', fields: 'id, collectionId, title, slug, date, document, expand', sort:'-date', limit: 12})
-const berita = beritas.slice(0, 4)
-const beritaTerbaru = beritas.slice(4, 8)
+const beritas = await pb.collection('news').getList(1, 12, {expand:'category', fields: 'id, collectionId, title, slug, date, document, expand', sort:'-date', limit: 12})
+const berita = beritas.items.slice(0, 4)
+const beritaTerbaru = beritas.items.slice(4, 12)
 ---
 
 <NewsLayout title="Home">
