--- a/src/components/berita/Navbar.astro
+++ b/src/components/berita/Navbar.astro
@@ -26,7 +26,7 @@ const isActive = (href: string) => {
     </div>
 
     {/* Desktop Menu */}
-    <div class="hidden md:flex items-center text-xs">
+    <!-- <div class="hidden md:flex items-center text-xs">
       <a href="/" class="mr-5 opacity-70 hover:opacity-100">Halaman Awal</a>
       {links.map((link) => (
         <a 
@@ -36,10 +36,10 @@ const isActive = (href: string) => {
           {link.name}
         </a>
       ))}
-    </div>
+    </div> -->
 
     {/* Mobile Menu Button */}
-    <button id="menu-btn" class="md:hidden flex flex-col gap-1">
+    <button id="menu-btn" class="flex flex-col gap-1 cursor-pointer">
       <span class="w-6 h-0.5 bg-white"></span>
       <span class="w-6 h-0.5 bg-white"></span>
       <span class="w-6 h-0.5 bg-white"></span>
@@ -47,11 +47,11 @@ const isActive = (href: string) => {
   </div>
 
   {/* Mobile Dropdown */}
-  <div id="mobile-menu" class="flex-col flex hidden mt-4 space-y-3 md:hidden">
+  <div id="mobile-menu" class="flex-col flex hidden mt-4 space-y-3">
     <a href="/" class="opacity-70 hover:opacity-100">Halaman Awal</a>
     {links.map((link) => (
       <a 
-        href={"/berita/kategori" + link.href} 
+        href={link.href} 
         class={`opacity-70 hover:opacity-100 ${isActive(link.href) ? "font-bold" : ""}`}
       >
         {link.name}
