--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,13 +19,13 @@ import { FacebookIcon, InstagramIcon, MapPin, TwitterIcon } from "lucide-react";
 		<div class="flex flex-col mx-auto max-sm:hidden">
             <h1 class="font-semibold">Sosial Media</h1>
             <div class="flex items-center gap-2 mt-2">
-                <a href="https://www.facebook.com/kementerianagama" target="_blank">
+                <a href="https://www.facebook.com/kemenagkoprob" target="_blank">
                     <FacebookIcon width={30} height={30} />
                 </a>
-                <a href="https://www.twitter.com/kementerianagama" target="_blank">
+                <a href="https://www.twitter.com/kemenagkoprob" target="_blank">
                     <TwitterIcon width={30} height={30} />
                 </a>
-                <a href="https://www.instagram.com/kementerianagama" target="_blank">
+                <a href="https://www.instagram.com/kemenagkoprob" target="_blank">
                     <InstagramIcon width={30} height={30} />
                 </a>
             </div>
