--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,6 +10,8 @@ const { title } = Astro.props;
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="Kantor Kementerian Agama Kota Probolinggo. Melayani masyarakat dengan integritas untuk mewujudkan masyarakat yang taat beragama, rukun, cerdas, dan sejahtera. Portal resmi berita & layanan publik." />
+		<meta name="keywords" content="Portal Resmi, Kantor Kementerian Agama, Kota Probolinggo" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title ? `${title} - ${process.env.SITE_NAME || import.meta.env.SITE_NAME}` : process.env.SITE_NAME || import.meta.env.SITE_NAME}</title>
 	</head>
