mengikuti surat edaran

--- a/src/pages/survei/index.astro
+++ b/src/pages/survei/index.astro
@@ -1,17 +1,77 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
-const visiMisi = {
-  visi: "Terwujudnya Masyarakat Kota Probolinggo Yang Taat Beragama, Inklusif, Toleran, Rukun,berpendidikan, Mandiri,sejahtera Lahir Dan Batin.",
-  misi: "Meningkatkan kualitas pembinaan kehidupan beragama. Meningkatkan kualitas pembinaan wawasan keagamaan. Meningkatkan kualitas pembinaan toleransi dalam kehidupan beragama. Meningkatkan kualitas pembinaan sesama dan antar umat. Meningkatkan kualitas penyelenggaraan RA, madrasah, pendidikan agama, dan pendidikan keagamaan. Meningkatkan kualitas penyelenggaraan ibadah haji dan umroh. Mewujudkan tatakelola kepemerintahan yang professional, integritas, bersih dan melayani",
-}
+import Chart from "@/components/Chart";
+const csvUrlSPAK = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTwVPUqSKDu8juq4Cax4xknNC0_M-1WIzkuwb8EC3w18Y6WPAVTz7VBC1XZqXohvKO85fWiI6DJ3FKn/pub?gid=992793483&single=true&output=csv"
+const csvUrlSPKP = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSyYcMkYtohUjoHO4TaA-1v_e3uM-asyhW-440y-SbWCjirYiDiO1LDJj7XXW_nKfaZfdP5vAK-f30g/pub?gid=1053296242&single=true&output=csv"
+const csvUrlSKM = "https://docs.google.com/spreadsheets/d/e/2PACX-1vS-XnLQR2igFV_Mj5eJOaeye_nqvTavsBrQhK_OHvYPZ66-SCtbliSkQtmpiwQJ4MfSBKIfPrxdw0ip/pub?gid=1673183934&single=true&output=csv"
+const survei = Astro.url.searchParams.get('survei') ?? 'skm';
 
-const { visi, misi } = visiMisi;
+console.log(survei);
 
 ---
 
 <BaseLayout title="Survei Pelayanan">
   <div class="max-sm:mx-5 mx-20 my-30">
     <h1 class="text-3xl font-bold mb-10">Survei Pelayanan</h1>
-    <p>Masih Progress ...</p>
+    <div class="grid grid-cols-3 max-sm:grid-cols-1 gap-5">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdRs4BwJO3aRW12PzwLiz7f-A3Cu1fnT2whp7Vm1rtns1to7A/viewform?usp=dialog" target="_blank"><img src="/logo/SKM.png" class=" rounded-2xl hover:scale-105 hover:shadow-2xl transition-all duration-300" alt="Survey Indeks Kepuasan Masyarakat terhadap Pelayanan Publik"></a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScAYJR8sLMgnjDzMAsindhFAFW1t-cIJAYURUmpj2zdlLM-sA/viewform?usp=dialog" target="_blank"><img src="/logo/SPKP.png" class=" rounded-2xl hover:scale-105 hover:shadow-2xl transition-all duration-300" alt="Survei Persepsi Kualitas Pelayanan (SPKP) pada Kantor Kementerian Agama Kota Probolinggo"></a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScrnWwmLRdVQ_5nIZE_aMNFc28avfaY1eTx-YyrXiLiwXKMeQ/viewform?usp=dialog" target="_blank"><img src="/logo/SPAK.png" class=" rounded-2xl hover:scale-105 hover:shadow-2xl transition-all duration-300" alt="Survey Persepsi Anti Korupsi"></a>
+    </div>
+
+    <div class="my-10 flex max-sm:flex-col items-center justify-between">
+      <h1 class="text-3xl max-sm:mb-5 font-bold">Hasil Survei</h1>
+      <form class="flex gap-3 max-sm:flex-col items-center">
+        <select name="survei" class="border border-gray-300 rounded-md p-2 max-sm:w-full">
+          <option value="skm" selected={survei === 'skm'}>Survey Indeks Kepuasan Masyarakat terhadap Pelayanan Publik</option>
+          <option value="spkp" selected={survei === 'spkp'}>Survey Persepsi Kualitas Pelayanan (SPKP) pada Kantor Kementerian Agama Kota Probolinggo</option>
+          <option value="spak" selected={survei === 'spak'}>Survey Persepsi Anti Korupsi</option>
+        </select>
+        <button type="submit" class="bg-green-600 text-white px-5 py-2 rounded-md max-sm:w-full">Tampilkan</button>
+      </form>
+    </div>
+
+    <!-- Diagram SKM -->
+    {survei === 'skm' && (
+      <>
+        <h3 class="text-xl font-semibold mb-5">Survey Indeks Kepuasan Masyarakat terhadap Pelayanan Publik</h3>
+        <Chart client:visible csvUrl={csvUrlSKM} colIndex={8} />
+      </>
+    )}
+    <!-- Diagram SPKP -->
+    {survei === 'spkp' && (
+      <>
+        <h3 class="text-xl font-semibold mb-5">Survey Persepsi Kualitas Pelayanan (SPKP) pada Kantor Kementerian Agama Kota Probolinggo</h3>
+        <Chart client:visible csvUrl={csvUrlSPKP} colIndex={8} />
+      </>
+    )}
+    <!-- Diagram SPAK -->
+    {survei === 'spak' && (
+      <>
+        <h3 class="text-xl font-semibold mb-5">Survey Persepsi Anti Korupsi</h3>
+        <div class="grid grid-cols-5 max-sm:grid-cols-2 gap-5">
+          <div>
+            <Chart client:visible csvUrl={csvUrlSPAK} colIndex={7}/>
+            <p class="text-center">Kecamatan</p>
+          </div>
+          <div>
+            <Chart client:visible csvUrl={csvUrlSPAK} colIndex={8}/>
+            <p class="text-center">Pekerjaan</p>
+          </div>
+          <div>
+            <Chart client:visible csvUrl={csvUrlSPAK} colIndex={9}/>
+            <p class="text-center">Tidak ada petugas yang memberikan pelayanan secara khusus</p>
+          </div>
+          <div>
+            <Chart client:visible csvUrl={csvUrlSPAK} colIndex={10}/>
+            <p class="text-center">Petugas tidak membeda-bedakan pelayanan karena factor suku, agama, kekerabatan, almamater dan sejenisnya</p>
+          </div>
+          <div>
+            <Chart client:visible csvUrl={csvUrlSPAK} colIndex={11}/>
+            <p class="text-center">Tidak ada petugas yang memberikan pelayanan yang tidak sesuai dengan ketentuan sehingga mengindikasikan kecurangan, seperti penyerobotan antrian, mempersingkat waktu tunggu layanan di luar prosedur, pengurangan syarat/prosedur, pengurangan denda, dll.</p>
+          </div>
+        </div>
+      </>
+    )}
   </div>
 </BaseLayout>
