--- a/src/pages/berita/blog/[slug].astro
+++ b/src/pages/berita/blog/[slug].astro
@@ -20,7 +20,7 @@ const post = detail_berita[0]
         </div>
 
     </div>
-    <img src={pb.files.getURL(post, post.document)} alt="gambar" class="my-5 w-full h-96 max-sm:h-64 object-cover object-center rounded-2xl">
+    <img src={pb.files.getURL(post, post.document)} alt="gambar" class="my-5 w-full max-sm:h-64 object-cover object-center rounded-2xl">
     <article class="text-justify mx-30 max-sm:mx-5">
         <div set:html={post.content} />
     </article>
