add new statistic

--- a/src/pages/survei/index.astro
+++ b/src/pages/survei/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import Chart from "@/components/Chart";
+import Chart from "@/components/PieChart";
 const csvUrlSPAK = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTwVPUqSKDu8juq4Cax4xknNC0_M-1WIzkuwb8EC3w18Y6WPAVTz7VBC1XZqXohvKO85fWiI6DJ3FKn/pub?gid=992793483&single=true&output=csv"
 const csvUrlSPKP = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSyYcMkYtohUjoHO4TaA-1v_e3uM-asyhW-440y-SbWCjirYiDiO1LDJj7XXW_nKfaZfdP5vAK-f30g/pub?gid=1053296242&single=true&output=csv"
 const csvUrlSKM = "https://docs.google.com/spreadsheets/d/e/2PACX-1vS-XnLQR2igFV_Mj5eJOaeye_nqvTavsBrQhK_OHvYPZ66-SCtbliSkQtmpiwQJ4MfSBKIfPrxdw0ip/pub?gid=1673183934&single=true&output=csv"
