--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,12 +1,12 @@
 ---
 import { Image } from "astro:assets";
-import { FacebookIcon, InstagramIcon, MapPin, TwitterIcon } from "lucide-react";
+import { FacebookIcon, InstagramIcon, MapPin } from "lucide-react";
 ---
 
 <div class="bg-green-700 py-10 mt-10 text-white">
     <div class="mx-20 max-sm:mx-5 grid grid-cols-3 max-sm:grid-cols-1 gap-10 items-center">
         <div class="flex items-center gap-2 mx-auto">
-			<Image src="/logo/logo.png" alt="logo" width={60} height={60} />
+			<Image src="/logo/logo.webp" alt="logo" width={60} height={60} />
             <div class="text-lg font-semibold">
                 <p >Kementerian Agama</p>
 				<p >Kota Probolinggo</p>
