--- a/src/components/berita/Navbar.astro
+++ b/src/components/berita/Navbar.astro
@@ -18,7 +18,7 @@ const isActive = (href: string) => {
   <div class="flex items-center justify-between">
     {/* Logo */}
     <div class="flex items-center gap-2">
-      <Image src="/logo/logo.png" alt="logo" width={40} height={40} />
+      <Image src="/logo/logo.webp" alt="logo" width={40} height={40} />
       <a href="/berita">
         <p class="text-sm">Portal Berita</p>
         <p class="text-sm">Kantor Kementerian Agama Kota Probolinggo</p>
