--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -164,7 +164,7 @@ a::after {
     <div class="overlay"></div>
     <div class="terminal">
         <div class="logo">
-            <Image src="/logo/logo.png" alt="logo" width={65} height={60} />
+            <Image src="/logo/logo.webp" alt="logo" width={65} height={60} />
             <p>Kantor Kementerian Agama Kota Probolinggo</p>
         </div>
         <h1>Error <span class="errorcode">404</span></h1>
