--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import { BeritaList } from "@/components/BeritaList";
 			<p class="text-center text-white max-sm:text-sm">Terhubung dengan kami melalui jalur yang mudah dan cepat. Layanan tersedia pada hari kerja pukul 08.00 - 15.30 WIB.</p>
 			<div class=" mx-20 max-sm:mx-5 grid grid-cols-2 max-sm:grid-cols-1 gap-5 mt-10 -mb-24">
 				<a href="https://www.lapor.go.id/" target="_blank" class="bg-white p-10 rounded-md shadow-xl flex gap-5 items-center">
-					<img src="/logo/lapor.png" width={60} height={60} alt="lapor">
+					<img src="/logo/lapor.webp" width={60} height={60} alt="lapor">
 					<div>
 						<h2 class="text-xl font-bold">Lapor</h2>
 						<p class="text-sm">Laporkan jika anda bertemu dengan pegawai kami yang tidak melaksanakan tugas sesuai SOP.</p>
