--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import { BeritaList } from "@/components/BeritaList";
 		<Laporan id="laporan" client:only="react"/>
 
 		<!-- Kepala Kemenag -->
-		<Sambutan client:only="react" />
+		<Sambutan client:visible />
 
 		 <!-- Akses Cepat -->
 		 <div class="bg-green-700 py-10 space-y-2" id="contact">
