--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,6 +9,7 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+		<link rel="preload" as="image" href="/bg.webp" type="image/webp" />
 		<link rel="preload" as="video" href="/bg.mp4" type="video/mp4" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="description" content="Kantor Kementerian Agama Kota Probolinggo. Melayani masyarakat dengan integritas untuk mewujudkan masyarakat yang taat beragama, rukun, cerdas, dan sejahtera. Portal resmi berita & layanan publik." />
