--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,6 +20,7 @@ const { title } = Astro.props;
 	<body class="bg-accent relative">
 		<Navbar client:load/>
 		<slot/>
-		<script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>
+		<script src="https://cdn.jsdelivr.net/npm/sienna-accessibility@latest/dist/sienna-accessibility.umd.js" defer></script>
+		<!-- <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script> -->
 	</body>
 	</html>
