--- a/src/pages/halal/index.astro
+++ b/src/pages/halal/index.astro
@@ -4,9 +4,14 @@ import BaseLayout from '@/layouts/BaseLayout.astro'
 ---
 
 <BaseLayout title={`Halal`}>
-  <div class="mx-20 max-sm:mx-5 mt-30 space-y-2">
-    <h1 class="text-3xl font-bold capitalize">Edukasi Halal</h1>
-    <p class="opacity-70">Berupa infografis poster edukasi halal yang dapat diakses publik</p>
+  <div class="mx-20 max-sm:mx-5 mt-30 flex justify-between items-center">
+    <div class="space-y-2">
+      <h1 class="text-3xl font-bold capitalize">Edukasi Jaminan Produk Halal</h1>
+      <p class="opacity-70">Berupa infografis poster edukasi jaminan produk halal yang dapat diakses publik</p>
+    </div>
+    <div>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdUJFnWpeG--8IlbJ1IAgVOWCyR-VUMq8E5K9BrQtVV4aZzHw/viewform" target="_blank" referrerpolicy="no-referrer" class="bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-600/80 hover:px-7 duration-300 cursor-pointer">Survei Kepuasan Masyarakat (Jaminan Produk Halal)</a>
+    </div>
   </div>
   <div class="mx-20 max-sm:mx-5 mt-10 space-y-2">
     <Halal client:only/>
